--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/SalasD93/SalasD93.github.io",
+  "homepage": "https://SalasD93.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
