--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
